build/log/idf_py_stderr_output_154059
Command: make -j 14 all
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c: In function 'event_handler':
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c:68:26: error: 'sta_netif' undeclared (first use in this function)
   68 |     esp_netif_dhcpc_stop(sta_netif);
      |                          ^~~~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c:68:26: note: each undeclared identifier is reported only once for each function it appears in
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c:75:9: error: expected ';' before 'ip_event_got_ip_t'
   75 |         ip_event_got_ip_t *event = (ip_event_got_ip_t *)event_data;
      |         ^~~~~~~~~~~~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c:77:27: error: 'event' undeclared (first use in this function); did you mean 'event_id'?
   77 |         esp_ip4addr_ntoa(&event->ip_info.ip, ip_str, sizeof(ip_str));
      |                           ^~~~~
      |                           event_id
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:141: esp-idf/main/CMakeFiles/__idf_main.dir/network/wifi_config.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6314: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:130: all] Error 2
